Add new LLVM IR files and update Makefiles for test and minimum projects

--- a/Minimum/minimum_b/Makefile
+++ b/Minimum/minimum_b/Makefile
@@ -3,14 +3,14 @@ LLVM_AS := llvm-as-19
 LLC     := llc-19
 LLD     := lld-19
 
-SRC      := /mnt/c/Users/josue/Downloads/llvm/llvm/minimum/palindromo.ll
-BITCODE  := palindromo.bc
-OBJ      := palindromo.o
-EXE      := palindromo
+SRC      := /mnt/c/Users/josue/Downloads/llvm/llvm/minimum/minimum.ll
+BITCODE  := minimum.bc
+OBJ      := minimum.o
+EXE      := minimum
 
 # System dynamic linker
 DYNAMIC_LINKER := /lib64/ld-linux-x86-64.so.2
-LIBC_DIR := /lib/x86_64-linux-gnu
+LIBC_DIR := /usr/lib/x86_64-linux-gnu
 
 .PHONY: all clean
 
@@ -27,10 +27,13 @@ $(OBJ): $(BITCODE)
 # Step 3: Link the object file into an executable with the dynamic linker and libc
 $(EXE): $(OBJ)
 	$(LLD) -flavor gnu \
-		-L $(LIBC_DIR) \
+		-o $(EXE) \
 		-dynamic-linker $(DYNAMIC_LINKER) \
-		-lc \
-		$(OBJ) -o $(EXE)
+		-L $(LIBC_DIR) \
+		$(LIBC_DIR)/crt1.o \
+		$(LIBC_DIR)/crti.o \
+		$(OBJ) -lc \
+		$(LIBC_DIR)/crtn.o
 
 clean:
 	rm -f $(BITCODE) $(OBJ) $(EXE)
